# az_small_dataplatform

./: .gitignore  README.md
.github/workflows/: deploy-bicep.yml  deploy-bundle.yml  deploy-terraform.yml
my_project/: README.md  pyproject.toml
my_project/resources/: my_project_etl.pipeline.yml
my_project/src/my_project/transformations/: stocks_bronze_ingest_from_eventhub.py  stocks_gold.py  stocks_silver.py
platform/: AzureDeploymentWithBicep.sh
platform/bicep/: README.md  databricks.bicep  databricks_vnet.bicep  eventhub.bicep  main.bicep  vnet.bicep
platform/terraform/: README.md  access_connector.tf  databricks.tf  eventhub.tf  main.tf  outputs.tf  provider.tf  variables.tf  vnet.tf
platform/terraform/modules/databricks/: main.tf  outputs.tf  variables.tf  virtual_networks.tf
platform/terraform/modules/eventhub/: main.tf  outputs.tf  variables.tf
project/: databricks.yml  pyproject.toml
project/resources/: pipeline_one.pipeline.yml  pipeline_two.pipeline.yml
project/src/pipeline_one/: README.md
project/src/pipeline_two/: README.md
project/src/pipeline_two/transformations/: stocks_bronze_ingest_from_eventhub.py  stocks_gold.py  stocks_silver.py
